--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="grid_1_of_3 images_1_of_3">
 					  <img src="images/g3.png">
 					  <h3>OLD CHAIR RESTORATION</h3>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+					  <p>We remove  the old rexine,cushion and tube on the old chair and apply new paint forthe frame.After we will fit new rexine,cushion and tube also .And so on we will make your old chair to new like a brand new chair.</p>
 				     <div class="button"><span><a href="#">Read More</a></span></div>
 				</div>
 				
