--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<a href="index.html"><img src="images/logo1.png" title="logo" /></a>
 				</div>
 				<div class="footer-right">
-					<p> &copy; 2013 Medical. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+					<p> &copy; 2022 HYDENT. All rights reserved | Design by <a href="http://w3layouts.com/">RIshad Mohammed</a></p>
 				</div>
 				<div class="clear"> </div>
 			</div>
