--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<div class="team1">
 								<img src="images/c01.jpg" class="img-responsive" alt="" />
-								<h4><a href="#">Power</a></h4>
-								<p>Vivamus vitae aliquam odio. </p>
+								<h4><a href="#">Fathima dental clinic</a></h4>
+								<p>DR: name . </p>
               
 							</div>
 						</li>
 						<li>
 							<div class="team1">
 								<img src="images/c02.jpg" class="img-responsive" alt="" />
-								 <h4><a href="#">Determination</a></h4>
-								<p>Suspendisse potentio. </p>
+								 <h4><a href="#">clinic name</a></h4>
+								<p>Dr. Sojin. </p>
               
 							</div>
 						</li>
