--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aeonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi.</p>-->
 									</div>
 					<div class="about-histore">
-									<h3>Our History</h3>
+									<!--<h3>Our History</h3>
 									<div class="historey-lines">
 										<ul>
 											<li><span>2010 &nbsp;-</span></li>
@@ -94,7 +94,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</ul>
 									</div>
 									<div class="clear"> </div>
-								</div>
+								</div>-->
 					<div class="about-services">
 									<h3>our services</h3>
 									<h4>LOREM IPM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT. PRAESENT VESTIBULUM.</h4>
